Fixed some formatting issues and got rid of vertical scrollbars. Still need to make this page responsive.

--- a/SimpleKitchen/Content/CookBooksMenu.css
+++ b/SimpleKitchen/Content/CookBooksMenu.css
@@ -26,12 +26,11 @@
     float: none;
     color: black;
     background-color: white;
-    overflow-y: scroll;
     padding: 0px;
 }
 
 .day-name{
-    line-height: 40px;
+    line-height: 37px;
     padding: 0px;
     margin: 0px;
     border: 0px;
